- fixed image before and after alignment issue

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1842,6 +1842,7 @@ nav {
   width: 760px;
   height: 509px;
   border-radius: 22px;
+  overflow: hidden;
 }
 
 .slider-image {
@@ -1901,6 +1902,41 @@ nav {
 .slider-button img {
     height: 150px;
     width:  150px;
+}
+
+.sixth-left-image-container {
+  width: 760px;
+  height: 509px;
+  border-radius: 22px;
+  position: relative;
+  overflow: hidden; 
+}
+
+.slider-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center; 
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.image-before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  clip-path: inset(0 calc(100% - var(--position)) 0 0); 
+}
+
+.image-after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width:1320px) {
